# track

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SETUP.md  bun.lockb  compose.yaml  deny.toml  justfile  package.json  release-please-config.json  release-plz.toml  tsconfig.base.json
crates/track-api/: Cargo.toml  build.rs
crates/track-api/src/: api_error.rs  app.rs  app_state.rs  backend_config.rs  build_info.rs  lib.rs  main.rs  migration_service.rs  remote_run_query.rs  tests.rs
crates/track-api/src/routes/: dispatches.rs  events.rs  health.rs  meta.rs  migration.rs  mod.rs  projects.rs  remote_agent.rs  reviews.rs  runs.rs  tasks.rs
crates/track-capture/: Cargo.toml
crates/track-capture/src/: capture.rs  lib.rs  llama_cpp.rs  llama_cpp_2.rs  prompt.rs  task_parser.rs  task_parser_output.rs
crates/track-cli/: Cargo.toml
crates/track-cli/src/: api_notify.rs  backend_client.rs  build_info.rs  cli.rs  cli_config.rs  lib.rs  main.rs  terminal_ui.rs  wizard.rs
crates/track-cli/tests/: cli.rs
crates/track-config/: Cargo.toml
crates/track-config/src/: config.rs  lib.rs  paths.rs  runtime.rs
crates/track-core/: Cargo.toml
crates/track-core/src/: api_notify.rs  backend_config.rs  capture.rs  config.rs  database.rs  dispatch_repository.rs  errors.rs  lib.rs  llama_cpp.rs  migration_service.rs  paths.rs  project_catalog.rs  project_discovery.rs  project_repository.rs  prompt.rs  remote_agent.rs  review_dispatch_repository.rs  review_repository.rs  settings_repository.rs  task_description.rs  task_id.rs  task_repository.rs  task_sort.rs  terminal_ui.rs  test_support.rs  time_utils.rs  types.rs  wizard.rs
crates/track-dal/: Cargo.toml  build.rs
crates/track-dal/.sqlx/: query-130eb454fb554947971259ea25428d1a9bde379fe4015924826ff92be3f0d7a8.json  query-44a398f2861cde1a908025a6f3fc51fb435934cfd38330a1006d9621c3b25798.json  query-4804cb896853c8297426b173988931936ab8eb4694fd2edcfb1106610027e33d.json  query-4d9092adbeb5301e6858d368d1518103a74ba0fcc8433901cbc7d12697697b85.json  query-4ffcbeced6fe8cf3ae58f476c4771c5c46fd62b27034bb550e169cd495e60a7d.json  query-60a86a7da6aeb78b9830d1eda455aec6cea9c745a1df0c403b1893e055875331.json  query-75f3a1e4f898a311ed4b3cde2c5ded86ba9468a8cc7353170cd5c372800484f9.json  query-8397c89d3e646c80960e09b32d827c52190a3c58624bb5b67eac7ffe723140b5.json  query-8ee41f8c470bcf5f143b09a2e98aa85ffbb30a1f4f8639f90c6796b36dd5c5cc.json  query-9085cc88c0248db268bdd3025bab8c79a9dac5fc6c32a8d786c22ddd75ea19c9.json  query-a1eee56e8bf31d8108a955e920b9cbe6b3f04058b87bf227816af2cc71b2d7be.json  query-a561bd321215375f3e6a3d6f9d9111eeeb00c403a0989709ab43ca6de32feb78.json  query-b0a53fc56378df2d883587ede56360097d14da2079f4d31834e8b3e5eefdb99a.json  query-bbcdf95cbf83d8ff36dc3ab4794a6e9fccefe382f8d1f4f2b1318e035d55a889.json  query-bc3c0a252c438a08fdb97eddb119aab93b542ad9f897bdd0f6ae1584cfc49c31.json  query-c2a9c2c9e168dce7962305236469df23354ef406cbfdba7389fbfec37f89edde.json  query-c38634b167765e581b427cdb7fb1664e984af003f3b9615451f53b0764ab3ee7.json  query-c4de6d1910f28a7e63782aef88c360b93b69cf24c89adff51bff862d77aff1ae.json  query-e8587854b0ab43a0771f6d87f27c5aca9cd0cb808a773328c103bef285cf25a1.json  query-e9e4ffdfb269220302f413cbd4f80fd8848b7a1cb387b7158925146cfb828624.json  query-f1c8d25990274b3fdea51a533c755aa8f16278a44d225c6eaaf71d08f2244655.json  query-f9d143e6183f4e5ab3c59a21efcee1a4c404c4026a2107adfb3982d1a7e13def.json
crates/track-dal/migrations/: 0001_initial_schema.sql  0002_normalize_remote_runs.sql
crates/track-dal/src/: dispatch_repository.rs  lib.rs  project_repository.rs  review_dispatch_repository.rs  review_repository.rs  settings_repository.rs  task_repository.rs
crates/track-dal/src/database/: mod.rs  sqlx_onboarding.rs
crates/track-dal/src/dispatch_repository/: mod.rs  records.rs
crates/track-dal/src/project_repository/: mod.rs  records.rs
crates/track-dal/src/remote_run_repository/: mod.rs  records.rs
crates/track-dal/src/review_dispatch_repository/: mod.rs  records.rs
crates/track-dal/src/review_repository/: mod.rs  records.rs
crates/track-dal/src/settings_repository/: mod.rs  records.rs
crates/track-dal/src/task_repository/: mod.rs  records.rs
crates/track-dal/src/test_support/: mod.rs
crates/track-integration-tests/: Cargo.toml
crates/track-integration-tests/src/: api_harness.rs  fixture.rs  lib.rs
crates/track-integration-tests/tests/: remote_dispatch.rs  remote_view.rs
crates/track-projects/: Cargo.toml
crates/track-projects/src/: lib.rs  project_catalog.rs  project_discovery.rs  project_metadata.rs
crates/track-remote-agent/: Cargo.toml  build.rs
crates/track-remote-agent/python_helper/tests/: test_helper.py
crates/track-remote-agent/python_helper/track_remote_helper/: __init__.py  __main__.py  cli.py  commands.py  common.py  worker.py
crates/track-remote-agent/src/: constants.rs  helper.rs  lib.rs  service.rs  ssh.rs  template_renderer.rs  types.rs  utils.rs
crates/track-remote-agent/src/prompts/: mod.rs  remote_dispatch.rs  remote_review.rs
crates/track-remote-agent/src/remote_actions/: checkout.rs  dispatch.rs  files.rs  github.rs  maintenance.rs  mod.rs  registry.rs
crates/track-remote-agent/src/remote_view/: dispatches.rs  filesystem.rs  maintenance.rs  mod.rs  projects.rs  review_runs.rs  runs.rs  task_runs.rs  types.rs  worktrees.rs
crates/track-remote-agent/src/schemas/: mod.rs  remote_dispatch.rs  remote_review.rs
crates/track-remote-agent/src/scripts/: mod.rs
crates/track-remote-agent/src/service/: cleanup.rs  dispatch.rs  follow_up.rs  maintenance.rs  mod.rs  refresh.rs  remote_agent_services.rs  review.rs  review_follow_up.rs  runtime.rs  start_gate.rs  tests.rs
crates/track-remote-agent/src/types/: dispatch.rs  events.rs  github.rs  mod.rs
crates/track-types/: Cargo.toml
crates/track-types/src/: build_info.rs  dispatch_id.rs  errors.rs  git_remote.rs  ids.rs  lib.rs  migration.rs  path_component.rs  task_id.rs  test_support.rs  types.rs  urls.rs
crates/track-types/src/ids/: dispatch_id.rs  mod.rs  (+3 more)
(+300 files in other folders)
