[package]
name = "track-api"
edition.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "track-api"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
track-core = { path = "../track-core" }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
