[package]
name = "track-api"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "HTTP API and static asset server for the track issue tracker."
readme = "../../README.md"

[[bin]]
name = "track-api"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
track-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
