[package]
name = "track-capture"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Local task parsing and model integration for the track issue tracker."
readme = "../../README.md"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]

[dependencies]
hf-hub = { workspace = true, features = ["ureq"] }
llama-cpp-2 = { workspace = true }
serde_json = { workspace = true }
track-core = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
