[package]
name = "track-cli"
edition.workspace = true
version.workspace = true
publish = false

[features]
default = []
cuda = ["track-capture/cuda"]

[[bin]]
name = "track"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
track-capture = { path = "../track-capture" }
track-core = { path = "../track-core" }
ureq = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
