[package]
name = "track-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "CLI for capturing tasks in the track issue tracker."
readme = "../../README.md"

[features]
default = []
cuda = ["track-capture/cuda"]

[[bin]]
name = "track"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
track-capture = { workspace = true }
track-core = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }
