[package]
name = "track-config"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Configuration schema, runtime config resolution, and path helpers for track."
readme = "../../README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
track-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
