[package]
name = "track-core"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
dialoguer = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
slug = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "time"] }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "macros", "parsing"] }
tokio = { workspace = true, features = ["rt", "sync"] }
ureq = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
