[package]
name = "track-core"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Shared backend primitives and repositories for the track issue tracker."
readme = "../../README.md"

[dependencies]
dialoguer = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
slug = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "time"] }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "macros", "parsing"] }
tokio = { workspace = true, features = ["rt", "sync"] }
ureq = { workspace = true }
url = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
