[package]
name = "track-dal"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Data access layer for track persistence."
readme = "../../README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite", "time"] }
tokio = { workspace = true, features = ["rt", "sync"] }
track-config = { workspace = true }
track-projects = { workspace = true }
track-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
