[package]
name = "track-integration-tests"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
track-api = { path = "../track-api" }
track-core = { path = "../track-core" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
