[package]
name = "track-integration-tests"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
track-api = { workspace = true }
track-config = { workspace = true }
track-dal = { workspace = true }
track-projects = { workspace = true }
track-remote-agent = { workspace = true }
track-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
