[package]
name = "track-remote-agent"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Remote dispatch and review orchestration for track."
readme = "../../README.md"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
slug = { workspace = true }
time = { workspace = true }
track-config = { workspace = true }
track-dal = { workspace = true }
track-projects = { workspace = true }
track-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
